{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 1043,
  "lineage": "9f43de50-ac83-9a58-a7b7-82d29b9e72bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526715786843:internet-gateway/igw-0ec5093b97700ef45",
            "id": "igw-0ec5093b97700ef45",
            "owner_id": "526715786843",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0f4e5aa0b562dadb8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526715786843:route-table/rtb-04206f0bd7d0cbbb7",
            "id": "rtb-04206f0bd7d0cbbb7",
            "owner_id": "526715786843",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec5093b97700ef45",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-routing-table"
            },
            "tags_all": {
              "Name": "public-routing-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4e5aa0b562dadb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09eaecfdd6fb1bd37",
            "route_table_id": "rtb-04206f0bd7d0cbbb7",
            "subnet_id": "subnet-0988269fa4663016b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075cd73f451b5065e",
            "route_table_id": "rtb-04206f0bd7d0cbbb7",
            "subnet_id": "subnet-01029f2aae4365c18"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526715786843:security-group/sg-0ed07caf194f3f0a6",
            "description": "Allow connections to the magz database",
            "egress": [],
            "id": "sg-0ed07caf194f3f0a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permit database access",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0013054ba4caf3b93"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "magz-db",
            "name_prefix": "",
            "owner_id": "526715786843",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "magz-db"
            },
            "tags_all": {
              "Name": "magz-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4e5aa0b562dadb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.hello_frontend",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hello_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526715786843:security-group/sg-06fc646872faa9dfe",
            "description": "Allow connections to the magz backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fc646872faa9dfe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Permit application access",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0013054ba4caf3b93"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "magz-backend",
            "name_prefix": "",
            "owner_id": "526715786843",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "magz-backend"
            },
            "tags_all": {
              "Name": "magz-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4e5aa0b562dadb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.hello_frontend",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hello_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526715786843:security-group/sg-0013054ba4caf3b93",
            "description": "Allow connections to the front-end HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0013054ba4caf3b93",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permit Intranet HTTP access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "magz-frontend-1",
            "name_prefix": "",
            "owner_id": "526715786843",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "magz-frontend"
            },
            "tags_all": {
              "Name": "magz-frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4e5aa0b562dadb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526715786843:subnet/subnet-0988269fa4663016b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0988269fa4663016b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "526715786843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-0f4e5aa0b562dadb8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526715786843:subnet/subnet-01029f2aae4365c18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01029f2aae4365c18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "526715786843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-2"
            },
            "tags_all": {
              "Name": "public-2"
            },
            "vpc_id": "vpc-0f4e5aa0b562dadb8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526715786843:vpc/vpc-0f4e5aa0b562dadb8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eb1b132ae6deaf85",
            "default_route_table_id": "rtb-08a77d4c879847d5d",
            "default_security_group_id": "sg-0c2597d5b062b57e9",
            "dhcp_options_id": "dopt-04820c6240f854b5a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f4e5aa0b562dadb8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a77d4c879847d5d",
            "owner_id": "526715786843",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:526715786843:loadbalancer/app/magz/c684c5d131bada27",
            "arn_suffix": "app/magz/c684c5d131bada27",
            "desync_mitigation_mode": "defensive",
            "dns_name": "magz-1938773804.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:526715786843:loadbalancer/app/magz/c684c5d131bada27",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "magz",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0013054ba4caf3b93"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01029f2aae4365c18"
              },
              {
                "subnet_id": "subnet-0988269fa4663016b"
              }
            ],
            "subnets": [
              "subnet-01029f2aae4365c18",
              "subnet-0988269fa4663016b"
            ],
            "tags": {
              "Name": "magz"
            },
            "tags_all": {
              "Name": "magz"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0f4e5aa0b562dadb8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.hello_frontend",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:526715786843:listener/app/magz/c684c5d131bada27/bf8a4a574e18b3c9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:526715786843:targetgroup/magz-http-1/96ba3698f4e9176f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:526715786843:listener/app/magz/c684c5d131bada27/bf8a4a574e18b3c9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:526715786843:loadbalancer/app/magz/c684c5d131bada27",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "magz"
            },
            "tags_all": {
              "Name": "magz"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:526715786843:targetgroup/magz-http-1/96ba3698f4e9176f",
            "arn_suffix": "targetgroup/magz-http-1/96ba3698f4e9176f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:526715786843:targetgroup/magz-http-1/96ba3698f4e9176f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "magz-http-1",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "magz-http-1"
            },
            "tags_all": {
              "Name": "magz-http-1"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f4e5aa0b562dadb8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}